[package]
name = "whisper"
version = "0.1.0"
authors = ["hatoo <hato2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# vst = "0.1"
# vst = "^0.0"
vst = { git = "https://github.com/rustaudio/vst-rs" }
rand = "0.7"
winit = "0.20.0-alpha4"
winapi = "0.3"
glium = "0.26.0-alpha5"
glutin = "0.22.0-alpha5"
conrod_core = "0.68"
conrod_glium = "0.68"
conrod_winit = "0.68"
find_folder = "0.3.0"

[patch.crates-io]
conrod_winit = { git = "https://github.com/hatoo/conrod.git", branch = "update-glium" }
conrod_glium = { git = "https://github.com/hatoo/conrod.git", branch = "update-glium" }
conrod_core = { git = "https://github.com/hatoo/conrod.git", branch = "update-glium" }

[lib]
name = "whisper"
crate-type = ["cdylib"]